corpus/ceph/19.2.2/index.md
---
collection: ceph
version: "19.2.2"
title: "Welcome to Ceph"
source_url: https://docs.ceph.com/en/squid/
fetched_at: 2026-07-27T16:38:44+00:00
---
# Welcome to Ceph

Ceph delivers **object, block, and file storage in one unified system**.

> **Warning:**
>
> [If this is your first time using Ceph, read the “Basic Workflow”
> page in the Ceph Developer Guide to learn how to contribute to the
> Ceph project. (Click anywhere in this paragraph to read the “Basic
> Workflow” page of the Ceph Developer Guide.)](dev/developer_guide/basic-workflow/index.md#basic-workflow-dev-guide).

> **Note:**
>
> [If you want to make a commit to the documentation but you don’t
> know how to get started, read the “Documenting Ceph” page. (Click anywhere
> in this paragraph to read the “Documenting Ceph” page.)](start/documenting-ceph/index.md#documenting-ceph).

### Ceph Object Store

- RESTful Interface
- S3- and Swift-compliant APIs
- S3-style subdomains
- Unified S3/Swift namespace
- User management
- Usage tracking
- Striped objects
- Cloud solution integration
- Multi-site deployment
- Multi-site replication

### Ceph Block Device

- Thin-provisioned
- Images up to 16 exabytes
- Configurable striping
- In-memory caching
- Snapshots
- Copy-on-write cloning
- Kernel driver support
- KVM/libvirt support
- Back-end for cloud solutions
- Incremental backup
- Disaster recovery (multisite asynchronous replication)

### Ceph File System

- POSIX-compliant semantics
- Separates metadata from data
- Dynamic rebalancing
- Subdirectory snapshots
- Configurable striping
- Kernel driver support
- FUSE support
- NFS/CIFS deployable
- Use with Hadoop (replace HDFS)

See [Ceph Object Store](radosgw.md) for additional details.

See [Ceph Block Device](rbd.md) for additional details.

See [Ceph File System](cephfs.md) for additional details.

Ceph is highly reliable, easy to manage, and free. The power of Ceph
can transform your company’s IT infrastructure and your ability to manage vast
amounts of data. To try Ceph, see our [Getting Started](start.md) guides. To learn more
about Ceph, see our [Architecture](architecture.md) section.

> **Brought to you by the Ceph Foundation:**
>
> The Ceph Documentation is a community resource funded and hosted by the non-profit [Ceph Foundation](https://ceph.io/en/foundation/). If you would like to support this and our other efforts, please consider [joining now](https://ceph.io/en/foundation/join/).
